@@ -25,7 +25,7 @@ Disabling specific mime-types
 This can be achieved using 2 files. They are:
 /etc/totem/browser-plugins.ini ($(sysconfdir)/totem/browser-plugins.ini)
 and
-~/.gnome2/Totem/browser-plugins.ini
+~/.config/totem/browser-plugins.ini
 
 The format is:
 [Plugins]
